--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -88,6 +88,13 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+        &--recognition{
+            height: 50vh;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/recognitionbg.png);
+            background-position: top right;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
     }
 
     &__text-br{
