--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -97,12 +97,13 @@
         padding: 34px 0 20px 0;
 
         &__lower{
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             color: rgba(0,0,0,.9);
             /* transform: translateY(4px); */
             padding-left: 10px;
             font-weight:300;
-            line-height:2
+            line-height:0;
+            display:contents
         }
 
         span{
@@ -199,7 +200,7 @@
     &__link:link, &__link:visited{
         text-decoration: none;
         color: #000;
-        font-size: 0.7rem;
+        font-size: 0.9rem;
         /* margin-right: 20px; */
         display: inline-flex;
         white-space: nowrap;
@@ -213,6 +214,9 @@
         white-space: nowrap;
         width: 20%;
 
+        &>div {
+            padding-right: 10px;
+        }
         & a {
             margin: 0px 3px;
         }
