--- a/app/assets/styles/modules/_diff.css
+++ b/app/assets/styles/modules/_diff.css
@@ -89,7 +89,7 @@
             display: flex;
             justify-content: space-between;
             padding: 70px 50px 50px 60px;
-            position: relative;
+            /* position: relative; */
             
             &:nth-of-type(odd){
                 
