--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -23,16 +23,16 @@
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.74), rgba(0, 0, 0, 0.74)), url(../../assets/images/work-bg.jpg);        
         }
 
-        &--work{
-            height: 60vh;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../assets/images/work-bg.jpg);        
+        &--geek{
+            height: 64vh;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../assets/images/solutionsbg.png);        
             background-position: bottom right;
             background-size: cover;
             background-repeat: no-repeat;        
         }
 
         &--about{
-            height: 61.5vh;
+            height: 66.5vh;
             background: linear-gradient(to right, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(../../assets/images/about.png);
             background-position: top center;
             background-size: cover;
@@ -67,8 +67,8 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
-        &--who{
-            height: 50vh;
+        &--how{
+            height: 63vh;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/whobg.png);
             background-position: top right;
             background-size: cover;
@@ -76,20 +76,20 @@
         }
         &--solutions{
             height: 50vh;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/solutionsbg.png);
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/work-bg.jpg);
             background-position: top right;
             background-size: cover;
             background-repeat: no-repeat;
         }
         &--diff{
-            height: 50vh;
+            height: 64vh;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/diffbg.png);
             background-position: top right;
             background-size: cover;
             background-repeat: no-repeat;
         }
         &--recognition{
-            height: 50vh;
+            height: 64vh;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../assets/images/recognitionbg.png);
             background-position: top right;
             background-size: cover;
@@ -141,7 +141,7 @@
         font-size: 1.3rem;
         color: #ffffff;
         font-family: 'Sofia Pro', serif;
-        font-weight: 100;
+        font-weight: 200;
         line-height: 28px;
         /* opacity: 0.8; */
 
@@ -197,6 +197,54 @@
         width: 12.8rem;
         vertical-align: bottom;
         transform: translateY(-11px);
+    }
+
+    &__sub--menu {
+        position: absolute;
+        bottom: 0;
+        text-align: center;
+        width: 100%;
+        margin: 0 auto;
+        border-top: 1px solid #807D7D;
+        
+        & ul {
+            width: 100%;
+            display: flex;
+            justify-content:center;
+            /* padding:12px 0px; */
+        }
+
+        & li {
+            list-style-type: none;
+            padding: 22px 12px;
+            
+            &.active{
+                border-bottom: 6px solid #FB5A1E;
+                transition: all 0.6s ease-in;
+                
+                & a  {
+                    font-size: 24px;
+                    font-weight: 300;
+                }
+            }
+
+        & a{
+            color: white;
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 100;
+            font-size: 18px;
+            line-height: 20px;
+            height: 100%;
+            &:hover {
+                color: #FB5A1E;;
+            }
+            
+
+        }
+        
+    }
+
     }
 
    
@@ -267,6 +315,30 @@
     }
     .header__container--contact {
         background-position: top top;
+    }
+}
+@media only screen and (max-width: 768px){
+    .header__sub--menu li a {
+        font-size: 15px;
+    }
+    .header__sub--menu li.active a {
+        font-size: 19px;
+    }
+}
+@media only screen and (max-width: 660px){
+    .header__sub--menu li  {
+        padding: 14px 8px;
+    }
+    .header__sub--menu li a {
+        font-size: 12px;
+    }
+    .header__sub--menu li.active a {
+        font-size: 16px;
+    }
+}
+@media only screen and (max-width: 512px){
+    .header__sub--menu  {
+        display: none;
     }
 }
 @media only screen and (max-width:600px){
