--- a/app/assets/styles/modules/_solutions.css
+++ b/app/assets/styles/modules/_solutions.css
@@ -26,6 +26,7 @@
             z-index: -1;
             width: 100%;
             height: 86%;
+            opacity: 0.16;
         }
 
     }
@@ -98,14 +99,27 @@
         }
     }
     &__visual {
+        position: relative;
         &:hover {
             animation: cardHover 1.2s forwards 0s ease-out;;
         }
         
         & img {
             width: 100%;
-
-            
+        }
+        & h3 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 24px;
+            line-height: 65px;
+            text-align: center;
+            color: #fff;
+            white-space: nowrap;
         }
     }
 
@@ -135,7 +149,7 @@
         font-family: Sofia Pro;
         font-style: normal;
         font-weight: 300;
-        font-size: 12px;
+        font-size: 16px;
         line-height: 20px;
         color: #504D4D;
         /* text-align: center;         */
