--- a/app/assets/styles/modules/_recognition.css
+++ b/app/assets/styles/modules/_recognition.css
@@ -25,7 +25,7 @@
         font-family: Sofia Pro;
         font-style: normal;
         font-weight: 300;
-        font-size: 17px;
+        font-size: 16px;
         letter-spacing: 0.02em;
         line-height: 23px;
 
@@ -34,6 +34,14 @@
         }
     }
     &__btn {
+        font-family: Sofia Pro;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 43.4%;
+        letter-spacing: -0.02em;
+        color: #FFFFFF;
+        padding: 12px 24px;
         text-align: right;
         position: absolute;
         bottom: 20px;
