--- a/app/assets/styles/modules/_recognition.css
+++ b/app/assets/styles/modules/_recognition.css
@@ -47,6 +47,33 @@
         bottom: 20px;
         right: 20px;
     }
+    &__circle{
+        position: absolute;
+        top:3%;
+        left: 0;
+        z-index: -1;
+        width: 80%;
+
+        & img {
+            width: 100%;
+        }
+    }
+    &__square{
+        position: absolute;
+        top:25%;
+        right: 0;
+        z-index: -1;
+    }
+    &__oval{
+        position: absolute;
+        width: 80%;
+        bottom: 84px;
+        z-index: -1;
+        right: 6%;
+        & img {
+            width: 100%;
+        }
+    }
     
 }
 @media only screen and (max-width: 1176px){
