--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -37,3 +37,4 @@
 @import 'modules/_blog.css';
 @import 'modules/_recognition.css';
 @import 'modules/_geek.css';
+@import 'modules/_blog-story.css';
