--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -28,11 +28,13 @@
                 flex-direction: column;
                 align-items: flex-start;
                 justify-content: space-between;
+                width: 100%;
                 
-                & a > span {
-                    display: block;
-                    transform:translateY(-40px)
+                & p {
+                    line-height: 1.7;
                 }
+                
+                
             }
 
         }
@@ -52,10 +54,13 @@
                 width: 100%;
             }
         }
+        & p {
+            padding: 6px 0px;
+        }
     }
-    &__text p{
-        padding: 20px 0px;
-    }
+    /* &__text p{
+        padding: 6px 0px;
+    } */
     &__desc {
         & p {
             padding: 10px 0px;
@@ -85,7 +90,7 @@
         font-family: Sofia Pro;
         font-style: normal;
         font-weight: 600;
-        font-size: 40px;
+        font-size: 34px;
         line-height: 26px;
         color: #FB5A1E;        
     }
@@ -95,14 +100,39 @@
         font-weight: 300;
         font-size: 14px;
         line-height: 40px;
-        color: #504D4D;        
+        color: #504D4D;    
+        
+        &--italics{
+            font-family: Sofia Pro;
+            font-style: italic;
+            font-weight: 300;
+            font-size: 12px;
+            line-height: 40px;
+            color: #504D4D;            
+        }
+    }
+    &__cta span {
+        display: block;
+        /* transform:translateY(-40px) */
+        line-height: 25px;
+        color: #504D4D;
+        &:after {
+            content: '';
+            display:block;
+            width:50px;
+            height:2px;
+            background:#504D4D;
+        }
     }
     &__text {
         font-family: Sofia Pro;
         font-style: normal;
-        font-weight: 300;
-        font-size: 18px;
-        line-height: 30px;
-        color: #504D4D;        
+        font-weight: 600;
+        font-size: 24px;
+        line-height: 35px;
+        color: #333333;               
+    }
+    &__red {
+        color:#FB5A1E;
     }
 }
