--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -130,7 +130,15 @@
         font-weight: 600;
         font-size: 24px;
         line-height: 35px;
-        color: #333333;               
+        color: #333333;   
+        &--long {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+            color: #504D4D;            
+        }            
     }
     &__red {
         color:#FB5A1E;
