--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -216,7 +216,7 @@
 
         & li {
             list-style-type: none;
-            padding: 22px 12px;
+            padding: 22px 17px;
             
             &.active{
                 border-bottom: 6px solid #FB5A1E;
@@ -337,8 +337,11 @@
     }
 }
 @media only screen and (max-width: 512px){
-    .header__sub--menu  {
-        display: none;
+    .header__sub--menu li  {
+        padding: 14px 4px;
+    }
+    .header__sub--menu  li a {
+        font-size: 10px;
     }
 }
 @media only screen and (max-width:600px){
