--- a/app/assets/styles/modules/_mobile-nav.css
+++ b/app/assets/styles/modules/_mobile-nav.css
@@ -18,11 +18,11 @@
     }
 
     &__container:nth-child(1) .mobile-nav--resp.show {
-        height: 451px;
+        height: 390px;
     }
 
     &__container:nth-child(2) .mobile-nav--resp.show{
-        height: 460px;
+        height: 420px;
     }
 
     &__container:nth-child(3) .mobile-nav--resp.show{
@@ -53,6 +53,10 @@
         font-weight: 500;
         text-decoration: none;
         line-height: normal;
+
+        &.xheight{
+            line-height: 35px;
+        }
     }
 
     &__title--small:link.mobile__list-dot:before {
@@ -85,7 +89,7 @@
     }
 
     &__sub{
-        padding: 8px 0 0 30px;
+        padding: 13px 0 0 9px;
     }
 
     &__links{
@@ -97,7 +101,7 @@
     &__list-item{
         display: flex;
         justify-content: flex-start;
-        align-items:center;
+        align-items:flex-start;
         border-bottom: 1px solid #FB5A1E;
 
         padding: 6px 0 18px 0;
@@ -155,6 +159,10 @@
 
     &__social-img{
         width: 20px;
+
+        &.facebook {
+            width: 9px;
+        }
     }
 
     &__list-item-link:hover{
@@ -340,6 +348,19 @@
     }
     .mobile-nav__list-item--small {
         padding-bottom: 9px;
+    }
+    .mobile-nav__social-img{
+        /* width: 20px; */
+
+        &.facebook {
+            width: 7px;
+        }
+    }
+    .mobile-nav__container:nth-child(1) .mobile-nav--resp.show {
+        height: 330px;
+    }
+    .mobile-nav__container:nth-child(2) .mobile-nav--resp.show {
+        height: 360px;
     }
 
 }
